--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -22,6 +22,7 @@
   </head>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
   <script type="text/javascript" src="https://cdn.shopify.com/s/files/1/2465/8681/files/jquery.cookie.js?v=1646126906"></script>
+  {{ 'checkout-buried.js'  | asset_url | script_tag }}
   <script>
       
   </script>
