--- a/sections/main-page.liquid
+++ b/sections/main-page.liquid
@@ -1,4 +1,4 @@
-{% unless section.settings.full_width %}<div class="article">{% endunless %}
+{% unless section.settings.full_width %}<div class="article article-buried">{% endunless %}
   <div class="container cf" data-cc-animate>
     <div class="page-header cf">
       <h1 class="majortitle">{{ page.title }}</h1>
